--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ThetaFrame</title>
   </head>
   <body class="bg-gray-100">
-    <div id="root"></div>
+    <div id="root"></div> <!-- ✅ Required -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
