--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThetaFrame</title>
+    <title>Web App</title>
+    <meta
+      name="description"
+      content="A lightweight web app for focused workflows and daily planning."
+    />
+    <meta property="og:title" content="Web App" />
+    <meta
+      property="og:description"
+      content="A lightweight web app for focused workflows and daily planning."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Web App" />
+    <meta
+      name="twitter:description"
+      content="A lightweight web app for focused workflows and daily planning."
+    />
+    <meta name="twitter:image" content="/og.png" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-slate-50 text-slate-900">
     <div id="root"></div> <!-- ✅ Required -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
